# raytracer

./: CMakeLists.txt
src/: CMakeLists.txt  engine.cpp  engine.h  glwin.cpp  glwin.h  main.cpp  makeglwin.py  shader.cpp  shader.h  shaders.qrc  texture.cpp  texture.h  textures.qrc  timedependentvariable.cpp  timedependentvariable.h  utilities.cpp  utilities.h
src/shaders/: raytracer_frag.glsl
